pilot/pkg/security/authz/builder/testdata/http/simple-policy-multiple-td-aliases-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - from:
        - source:
            principals: [ "cluster.local/ns/rule[0]/sa/from[0]-principal[0]" ]
        - source:
            principals: [ "some-td/ns/rule[0]/sa/from[1]-principal[0]", "cluster.local/ns/rule[0]/sa/from[1]-principal[1]" ]
            namespaces: [ "rule[0]-from[1]-ns[0]" ]
